@@ -6,6 +6,7 @@ Version 0.2.3 (2010-12-??)
 ------------------------------
 - Fixed countries bug in checkout
 - Fixed language files still containing search label
+- Added hooks for altering taxes
 
 Version 0.2.2 (2010-12-05)
 ------------------------------
